gcc-14.2.0/gcc/testsuite/gdc.test/compilable/testfptr.d
version https://git-lfs.github.com/spec/v1
oid sha256:fa32046ea61672de878b24e1d0fc9c6c75a9ecda18c370011ee5e19212f3d278
size 12946
